# evolver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  benchmark-protocol.md  evidence.md
docs/superpowers/plans/: 2026-05-10-evolver-implementation.md
docs/superpowers/specs/: 2026-05-10-evolver-design.md
evolver/: archive.py  cli.py  engine.py  generators.py  reports.py  runner.py  scanner.py  scoring.py  selection.py  suite.py
evolver/problems/longest_unique_substring/: baseline.py  benchmark.py  problem.yaml
evolver/problems/longest_unique_substring/tests/: test_correctness.py
evolver/problems/two_sum/: baseline.py  benchmark.py  problem.yaml
evolver/problems/two_sum/tests/: test_correctness.py
results/benchmark-suite/: README.md  suite_results.csv  suite_summary.json
src/evolver/: __init__.py  benchmarking.py  cli.py  engine.py  environment.py  reports.py  runner.py  scanner.py  spec.py  types.py
src/evolver/problems/levenshtein/: baseline.py  benchmark.py  problem.yaml
src/evolver/problems/levenshtein/tests/: test_correctness.py
tests/: test_archive.py  test_cli.py  test_evolution.py  test_runner.py  test_scanner.py  test_spec.py  test_suite.py
