[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolver"
version = "0.1.0"
description = "Closed loop program search with tests benchmarks lineage and evidence"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Atila Vahedian" }
]
keywords = [
  "program search",
  "benchmarking",
  "verification",
  "evolutionary optimization",
  "code generation",
  "research systems"
]
dependencies = [
  "pyyaml>=6.0.1",
  "rich>=13.7.1",
  "typer>=0.12.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.4.8"
]

[project.scripts]
evolver = "evolver.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/evolver"]

[tool.hatch.build.targets.wheel.force-include]
"src/evolver/problems" = "evolver/problems"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP006", "UP007", "UP035"]
